최신버전커밋 ( 깃허브오류 )

--- a/server/Server(신서버)/ConsoleApplication1/ConsoleApplication1.vcxproj.filters
+++ b/server/Server(신서버)/ConsoleApplication1/ConsoleApplication1.vcxproj.filters
@@ -96,6 +96,9 @@
     <ClCompile Include="Zone.cpp">
       <Filter>소스 파일\View</Filter>
     </ClCompile>
+    <ClCompile Include="DeadReckoning.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
@@ -166,6 +169,9 @@
     </ClInclude>
     <ClInclude Include="PacketDispatcher.h">
       <Filter>헤더 파일\Packet</Filter>
+    </ClInclude>
+    <ClInclude Include="DeadReckoning.h">
+      <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
