--- a/server/Server(신서버)/ConsoleApplication1/ConsoleApplication1.vcxproj
+++ b/server/Server(신서버)/ConsoleApplication1/ConsoleApplication1.vcxproj
@@ -33,6 +33,7 @@
     <ClCompile Include="Monster.cpp" />
     <ClCompile Include="CombatCollision.cpp" />
     <ClCompile Include="PacketDispatcher.cpp" />
+    <ClCompile Include="DeadReckoning.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="PacketMaker.h" />
@@ -58,6 +59,7 @@
     <ClInclude Include="DBProcess.h" />
     <ClInclude Include="CombatCollision.h" />
     <ClInclude Include="PacketDispatcher.h" />
+    <ClInclude Include="DeadReckoning.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{08FF5596-CE64-47F8-8961-CCF369C1D1A6}</ProjectGuid>
