--- a/server/Server(신서버)/ConsoleApplication1/ConsoleApplication1.vcxproj.filters
+++ b/server/Server(신서버)/ConsoleApplication1/ConsoleApplication1.vcxproj.filters
@@ -60,9 +60,6 @@
     <ClCompile Include="SyncObject.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Object.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
     <ClCompile Include="State_Chase.cpp">
       <Filter>소스 파일\FSM\State</Filter>
     </ClCompile>
@@ -98,6 +95,9 @@
     </ClCompile>
     <ClCompile Include="DeadReckoning.cpp">
       <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Object.cpp">
+      <Filter>소스 파일\Object</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
