서버 업데이트
몬스터 HeartBeat
1. 유저 시야의 보이지 않는 몬스터는 움직이지 않는다.
2. 유저 시야에 몬스터가 추가되면 움직이게 한다.
3. 움직이는 몬스터는 시야를 가지게 되고 만약 그 시야에 유저가 없으면 다시 움직이지 않는다.

-> 성능이 많이 향상되었다.
-> 릴리즈모드로 컴파일해서 성능이 향상되었다.

앞으로 할일
1. 3D 클라이언트와 연동
2. 오브젝트 충돌
3. NavigationMesh

--- a/server/Server(신서버)/ConsoleApplication1/ConsoleApplication1.vcxproj
+++ b/server/Server(신서버)/ConsoleApplication1/ConsoleApplication1.vcxproj
@@ -123,9 +123,13 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
+    <IncludePath>C:\Users\Sheunggyu\Desktop\tbb44_20160128oss_win_0\tbb44_20160128oss\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Users\Sheunggyu\Desktop\tbb44_20160128oss_win_0\tbb44_20160128oss\lib\ia32\vc14;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
+    <IncludePath>C:\Users\Sheunggyu\Desktop\tbb44_20160128oss_win_0\tbb44_20160128oss\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Users\Sheunggyu\Desktop\tbb44_20160128oss_win_0\tbb44_20160128oss\lib\intel64\vc14;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -172,6 +176,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>ws2_32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
