더미클라이언트 객체화
1. Sever기능을 Sever Class에 포함시켰다.
2. Client에서 쉽게 Server기능을 추가할 수 있도록 하였다.

--- a/server/Client/Win32Project1/Win32Project1.vcxproj
+++ b/server/Client/Win32Project1/Win32Project1.vcxproj
@@ -152,6 +152,7 @@
     <ClCompile Include="PacketDispatcher.cpp" />
     <ClCompile Include="User.cpp" />
     <ClCompile Include="PacketSender.cpp" />
+    <ClCompile Include="Server.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Monster.h" />
@@ -163,6 +164,7 @@
     <ClInclude Include="User.h" />
     <ClInclude Include="ObjectStatus.h" />
     <ClInclude Include="PacketSender.h" />
+    <ClInclude Include="Server.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Resource.rc" />
