--- a/server/Client/Win32Project1/Win32Project1.vcxproj.filters
+++ b/server/Client/Win32Project1/Win32Project1.vcxproj.filters
@@ -19,11 +19,11 @@
     <Filter Include="헤더 파일\Object">
       <UniqueIdentifier>{903a8cd5-ec16-49ef-b254-2a79e0863ad4}</UniqueIdentifier>
     </Filter>
-    <Filter Include="헤더 파일\Packet">
-      <UniqueIdentifier>{92f9072f-4bb9-4cd4-954a-74625bc656f0}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="소스 파일\Packet">
+    <Filter Include="소스 파일\Server">
       <UniqueIdentifier>{73483d2f-4a72-40b1-a9f5-296a1c2f1145}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="헤더 파일\Server">
+      <UniqueIdentifier>{92f9072f-4bb9-4cd4-954a-74625bc656f0}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -40,10 +40,13 @@
       <Filter>소스 파일\Object</Filter>
     </ClCompile>
     <ClCompile Include="PacketDispatcher.cpp">
-      <Filter>소스 파일\Packet</Filter>
+      <Filter>소스 파일\Server</Filter>
     </ClCompile>
     <ClCompile Include="PacketSender.cpp">
-      <Filter>소스 파일\Packet</Filter>
+      <Filter>소스 파일\Server</Filter>
+    </ClCompile>
+    <ClCompile Include="Server.cpp">
+      <Filter>소스 파일\Server</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -69,10 +72,13 @@
       <Filter>헤더 파일\Object</Filter>
     </ClInclude>
     <ClInclude Include="PacketDispatcher.h">
-      <Filter>헤더 파일\Packet</Filter>
+      <Filter>헤더 파일\Server</Filter>
     </ClInclude>
     <ClInclude Include="PacketSender.h">
-      <Filter>헤더 파일\Packet</Filter>
+      <Filter>헤더 파일\Server</Filter>
+    </ClInclude>
+    <ClInclude Include="Server.h">
+      <Filter>헤더 파일\Server</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
